--- a/resume.html
+++ b/resume.html
@@ -78,10 +78,10 @@
 <!--Resume-->
 
 <div id="resume">
-  <img src="images/2019_hw_resume.jpg">
+  <img src="images/2019_Resume_HWiemelt.jpg">
 </div>
 
-<button class="btn"><i class="fa fa-download"></i> Download</button>
+<button class="btn"><a href="/images/2019_Resume_HWiemelt.pdf" download><i class="fa fa-download"></i>Download</button>
 
 
     </div>
