Resume and Portfolio Adjustments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="rightcolumn">
 
   <div class="heathercard">
-    <a href="index.html"><h2 class="my_name" style="font-size:23px;">Heather<br>Wiemelt</h2></a>
+    <a href="aboutMe.html"><h2 class="my_name" style="font-size:23px;">Heather<br>Wiemelt</h2></a>
   </div>
 
 <div class="social_deets">
@@ -44,7 +44,7 @@
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
   <div class="topnav">
-    <a href="#home" class="active">Navigation</a>
+    <a href="#home" class="active"></a>
     <div id="myLinks">
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
@@ -82,60 +82,29 @@
 
       <div id="web" class="tabcontent">
         <h3>WEB</h3>
-<div class=helper>
-        <div class="responsive">
-          <div class="gallery">
-            <a target="_blank" href="images/web/atac_mobile_large.png">
-              <img src="images/web/atac_mobile2.png" alt="Arts Tech Animation Connection Mobile design 2">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-          </div>
-        </div>
+<div class="helper">
+
 
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="Arts Tech Animation Connection Desktop design">
                 <img src="images/web/atac_desktop.png" alt="Arts Tech Animation Connection Desktop design" width="500px">
               </a>
-              <div class="desc">Add a description of the image here</div>
+
             </div>
           </div>
 
-          <div class="responsive">
-            <div class="gallery">
-              <a target="_blank" href="Arts Tech Animation Connection Mobile design 1">
-                <img src="images/web/atac_mobile.png" alt="Arts Tech Animation Connection Mobile design 1">
-              </a>
-              <div class="desc">Add a description of the image here</div>
-            </div>
-          </div>
-
-          <div class="responsive">
-            <div class="gallery">
-              <a target="_blank" href="img_lights.jpg">
-                <img src="images/web/psychmobile.png" alt="Psychology Mobile Design 1">
-              </a>
-              <div class="desc">Add a description of the image here</div>
-            </div>
-          </div>
 
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="img_lights.jpg">
                 <img src="images/web/psych_desktop.png" alt="Psychology Desktop">
               </a>
-              <div class="desc">Add a description of the image here</div>
+
             </div>
           </div>
 
-          <div class="responsive">
-            <div class="gallery">
-              <a target="_blank" href="img_mountains.jpg">
-                <img src="images/web/psychmobile2.png" alt="Psychology Mobile Design 2">
-              </a>
-              <div class="desc">Add a description of the image here</div>
-            </div>
-          </div>
+
           <div class="clearfix"></div>
 </div>
         </div>
@@ -143,13 +112,13 @@
 
       <div id="print" class="tabcontent">
         <h3>PRINT</h3>
-<div class=helper>
+<div class="helper">
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/aurora_thumb.jpg">
               <img src="images/print/aurora_thumb.jpg" alt="digital painting of aurora landscape">
             </a>
-            <div class="desc">Add a description of the image here</div>
+
           </div>
         </div>
 
@@ -159,7 +128,7 @@
             <a target="_blank" href="img_forest.jpg">
               <img src="images/print/big_bird_thumb.png" alt="digital painting of cartoon bird">
             </a>
-            <div class="desc">Add a description of the image here</div>
+
           </div>
         </div>
 
@@ -187,7 +156,7 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/leonid_thumb.jpg" alt="colorful digital painting of city">
             </a>
-            <div class="desc">Add a description of the image here</div>
+
           </div>
         </div>
 
@@ -196,7 +165,7 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/cd_thumb.png" alt="geometric CD cover graphic">
             </a>
-            <div class="desc">Add a description of the image here</div>
+
           </div>
         </div>
 
@@ -205,7 +174,7 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/event_poster_thumb.png" alt="Arts Tech event poster">
             </a>
-            <div class="desc">Add a description of the image here</div>
+
           </div>
         </div>
 
@@ -214,7 +183,6 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/atk_info_thumb.png" alt="Arts tech information poster">
             </a>
-            <div class="desc">Add a description of the image here</div>
           </div>
         </div>
 
@@ -223,7 +191,6 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/music_saves_thumb.png" alt="Music Saves lives poster with yellow text on blue background">
             </a>
-            <div class="desc">Add a description of the image here</div>
           </div>
         </div>
 
@@ -232,7 +199,6 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/HomecomingPosterfull_thumb.png">
             </a>
-            <div class="desc">Add a description of the image here</div>
           </div>
         </div>
 
@@ -241,7 +207,6 @@
             <a target="_blank" href="img_mountains.jpg">
               <img src="images/print/homecomingcover_thumb.png" alt="Homecoming Banner graphic">
             </a>
-            <div class="desc">Add a description of the image here</div>
           </div>
         </div>
 
@@ -253,45 +218,40 @@
 
 <div id="video" class="tabcontent">
   <h3>VIDEO</h3>
-  <div class="helper">
+  <div class="videohelper">
 <!--Video-->
       <div class="responsiveVideo">
-        <div class="gallery">
+        <!-- <div class="gallery"> -->
           <iframe src="https://www.youtube.com/embed/H2McZ5Uit10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a>
-              <div class="desc">Add a description of the image here</div>
-        </div>
+        <!-- </div> -->
   </div>
 <!--Video-->
   <div class="responsiveVideo">
-        <div class="gallery">
+        <!-- <div class="gallery"> -->
           <iframe src="https://www.youtube.com/embed/ebxWb0ZhORc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a>
-              <div class="desc">Add a description of the image here</div>
-        </div>
+        <!-- </div> -->
   </div>
 <!--Video-->
   <div class="responsiveVideo">
-        <div class="gallery">
+        <!-- <div class="gallery"> -->
           <iframe src="https://www.youtube.com/embed/UbvoywKM-Cg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a>
-                <div class="desc">Add a description of the image here</div>
-        </div>
+        <!-- </div> -->
   </div>
 <!--Video-->
   <div class="responsiveVideo">
-        <div class="gallery">
+        <!-- <div class="gallery"> -->
           <iframe src="https://www.youtube.com/embed/Lk289A9ENj0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a>
-          <div class="desc">Add a description of the image here</div>
-        </div>
+        <!-- </div> -->
   </div>
 <!--Video-->
   <div class="responsiveVideo">
-        <div class="gallery">
+        <!-- <div class="gallery"> -->
 <iframe src="https://www.youtube.com/embed/iIiUOptyGKA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          </a>
-        <div class="desc">Add a description of the image here</div>
-       </div>
+       <!-- </div> -->
   </div>
 </div>
 </div>
@@ -300,13 +260,12 @@
 <div id="photography" class="tabcontent">
         <h3>PHOTOGRAPHY</h3>
 
-<div class=helper>
+<div class="helper">
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/model_thumb.jpg" alt="young indian woman dressed in traditional apparel">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -325,7 +284,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/roses_thumb.jpg" alt="romantic afternoon rose scene in front of a fan">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -334,7 +292,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/fall_thumb.jpg" alt="Close up of running water">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -343,7 +300,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/Sax_thumb.jpg" alt="man playing saxophone on stage under bright indigo lights">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -352,7 +308,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/blue_people_thumb.jpg" alt="blue atmosphere of dancing crowd at concert">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -361,7 +316,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/film_thumb.jpg" alt="black and white asymmetrical portrait in front of fountain">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -371,7 +325,6 @@
       <a target="_blank" href="img_lights.jpg">
         <img src="images/photography/msc/onenight_thumb.jpg" alt="shadow of an ice house">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -380,7 +333,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/fire_thumb.jpg" alt="close up of fireworks">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -389,7 +341,6 @@
       <a target="_blank" href="img_5terre.jpg">
         <img src="images/photography/msc/lonely_thumb.jpg" alt="dead roses beside brown chair">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -398,7 +349,6 @@
       <a target="_blank" href="img_lights.jpg">
         <img src="images/photography/msc/tree_thumb.jpg" alt="close up of a pine tree with specks of snow">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
@@ -408,7 +358,6 @@
       <a target="_blank" href="img_mountains.jpg">
         <img src="images/photography/msc/atkfest_thumb.jpg" alt="rapper on the microphone blurred with pink and blue lights">
       </a>
-      <div class="desc">Add a description of the image here</div>
     </div>
   </div>
 
