--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
     </div>
 
 
-    <div class="content_box">
+<div class="content_box">
 
 <!--Resume-->
 
@@ -81,10 +81,9 @@
   <img src="images/2019_Resume_HWiemelt.jpg">
 </div>
 
-<button class="btn"><a href="/images/2019_Resume_HWiemelt.pdf" download><i class="fa fa-download"></i>Download</button>
+<a href="/images/2019_Resume_HWiemelt.pdf" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
 
-
-    </div>
+</div>
 
   </div>
 </div>
