Added Full Images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="Arts Tech Animation Connection Desktop design">
+              <a target="_blank" href="images/web/atac_desktop.png">
                 <img src="images/web/atac_desktop.png" alt="Arts Tech Animation Connection Desktop design" width="500px">
               </a>
 
@@ -97,7 +97,7 @@
 
           <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="img_lights.jpg">
+              <a target="_blank" href="https://psychology.illinoisstate.edu/">
                 <img src="images/web/psych_desktop.png" alt="Psychology Desktop">
               </a>
 
@@ -125,7 +125,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_forest.jpg">
+            <a target="_blank" href="images/print/big_bird.jpg">
               <img src="images/print/big_bird_thumb.png" alt="digital painting of cartoon bird">
             </a>
 
@@ -153,7 +153,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/leonid.jpg" title="Digital painting emulation">
               <img src="images/print/leonid_thumb.jpg" alt="colorful digital painting of city">
             </a>
 
@@ -162,7 +162,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/cd.jpg">
               <img src="images/print/cd_thumb.png" alt="geometric CD cover graphic">
             </a>
 
@@ -171,7 +171,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/event_poster_thumb.jpg">
               <img src="images/print/event_poster_thumb.png" alt="Arts Tech event poster">
             </a>
 
@@ -180,7 +180,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/atk_info.jpg">
               <img src="images/print/atk_info_thumb.png" alt="Arts tech information poster">
             </a>
           </div>
@@ -188,7 +188,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/MusicSavesLives.png">
               <img src="images/print/music_saves_thumb.png" alt="Music Saves lives poster with yellow text on blue background">
             </a>
           </div>
@@ -196,7 +196,7 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/HomecomingPoster.jpg">
               <img src="images/print/HomecomingPosterfull_thumb.png">
             </a>
           </div>
@@ -204,9 +204,18 @@
 
         <div class="responsive">
           <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
+            <a target="_blank" href="images/print/homecoming.jpg">
               <img src="images/print/homecomingcover_thumb.png" alt="Homecoming Banner graphic">
             </a>
+          </div>
+        </div>
+
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="images/print/pianoinfographic_thumb.jpeg">
+              <img src="images/print/pianoinfographic_full.jpg" alt="Piano Graphic">
+            </a>
+
           </div>
         </div>
 
