Fix Broken Links +

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
       <a href="index.html"><div class="main_links">Portfolio</div><br></a>
-      <a href="contactMe.html"><div class="main_links">Contact Me</div></a>
   </div>
 </div>
 <!-- End Desktop -->
@@ -49,7 +48,6 @@
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
       <a href="index.html"><div class="main_links">Portfolio</div><br></a>
-      <a href="contactMe.html"><div class="main_links">Contact Me</div></a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
@@ -272,7 +270,7 @@
 <div class="helper">
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc/model.png">
         <img src="images/photography/msc/model_thumb.jpg" alt="young indian woman dressed in traditional apparel">
       </a>
     </div>
