About Me Description

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/roses_thumb.jpg" alt="romantic afternoon rose scene in front of a fan">
       </a>
     </div>
@@ -296,7 +296,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc/fall.JPG">
         <img src="images/photography/msc/fall_thumb.jpg" alt="Close up of running water">
       </a>
     </div>
@@ -304,7 +304,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc/sax.jpg">
         <img src="images/photography/msc/Sax_thumb.jpg" alt="man playing saxophone on stage under bright indigo lights">
       </a>
     </div>
@@ -312,7 +312,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/blue_people_thumb.jpg" alt="blue atmosphere of dancing crowd at concert">
       </a>
     </div>
@@ -320,7 +320,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/film_thumb.jpg" alt="black and white asymmetrical portrait in front of fountain">
       </a>
     </div>
@@ -329,7 +329,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/onenight_thumb.jpg" alt="shadow of an ice house">
       </a>
     </div>
@@ -337,7 +337,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/fire_thumb.jpg" alt="close up of fireworks">
       </a>
     </div>
@@ -345,7 +345,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/lonely_thumb.jpg" alt="dead roses beside brown chair">
       </a>
     </div>
@@ -353,7 +353,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
+      <a target="_blank" href="images/photography/msc/tree.png">
         <img src="images/photography/msc/tree_thumb.jpg" alt="close up of a pine tree with specks of snow">
       </a>
     </div>
@@ -362,7 +362,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
+      <a target="_blank" href="images/photography/msc">
         <img src="images/photography/msc/atkfest_thumb.jpg" alt="rapper on the microphone blurred with pink and blue lights">
       </a>
     </div>
