--- a/aboutMe.html
+++ b/aboutMe.html
@@ -43,7 +43,7 @@
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
   <div class="topnav">
-    <a href="#home" class="active">Navigation</a>
+    <a href="#home" class="active"></a>
     <div id="myLinks">
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
@@ -71,7 +71,24 @@
 
 
     <div class="content_box">
+<img src="images/hmw.jpg" style="float: left;padding:20px;margin:10px;width: 250px;" >
+      <h3>Hello!</h3>
 
+      <p>I am an artist at heart and a developer/designer at work. I live for creating and discovering unique visual and audial discoveries that the world has to offer.</p>
+
+      <h3>My style is my own. Here is how I work.</h3>
+
+      <p>When I am in my own headspace, I have an intuitive way of thinking. My style is consistent with staying close to the fundamentals of design and understanding that the frame is what holds up a masterpiece in the end. I favor traditional styles with organic finishes, but that doesn’t keep me from absorbing the newest and latest digital trends. I see how the world changes and I intend to evolve with it. I often work with others and am quite familiar with collaborative projects, however I do not shy away from doing my own thing and enjoy keeping myself busy with multiple creative projects at a time.</p>
+
+      <p>When I am tracking for solutions to problems, I keep notes, ask questions, and then get right to it. I consider myself both a visual and kinesthetic learner and pick up information best by doing and visualizing what is in front of me. Many of my closest friends and followers know that I have a love for arts in various fields. In my free time, you can find me solving a giant jigsaw puzzle, listening to music, reorganizing a bookshelf, visiting a local arts and crafts fair, oil painting, or immersing myself in a video game.</p>
+
+      <h3>What am I doing now?</h3>
+
+      <p>Since graduating with a Bachelor’s of Science Degree in <a href="https://finearts.illinoisstate.edu/arts-technology/" style="color: #ec91a6;">Arts Technology</a> at Illinois State University, I’ve been seeking new opportunities in the professional world, particularly around Chicagoland area.</p>
+
+      <p>In regards to the skills that I currently have, I take interest in all types of media and see myself specializing in more than one field of art. You may find that my most recent completed projects are focused within Front End Web Development, Graphic Design, Motion Design, and User Interface/User Experience Design. I am compelled to follow one or more of these paths into the professional world.</p>
+
+      <p>Want to work on a project together? <a href="mailto:heatherwiemelt@gmail.com" style=" color: #ec91a6;">Contact Me</a> </p>
 
 
 
