--- a/index.html
+++ b/index.html
@@ -120,39 +120,21 @@
           </div>
         </div>
 
-
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/big_bird.jpg">
-              <img src="images/print/big_bird_thumb.png" alt="digital painting of cartoon bird">
+              <img src="images/print/big_bird.jpg" alt="digital painting of cartoon bird">
             </a>
 
           </div>
         </div>
 
-        <!-- <div class="responsive">
-          <div class="gallery">
-            <a target="_blank" href="img_lights.jpg">
-              <img src="images/print/dig_purp_thumb.jpg" alt="Northern Lights">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-          </div>
-        </div> -->
-
-        <!-- <div class="responsive">
-          <div class="gallery">
-            <a target="_blank" href="img_mountains.jpg">
-              <img src="images/print/cosplaykaraoke_thumb.png" alt="Mountains">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-          </div>
-        </div> -->
 
 
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/leonid.jpg" title="Digital painting emulation">
-              <img src="images/print/leonid_thumb.jpg" alt="colorful digital painting of city">
+              <img src="images/print/leonid.jpg" alt="colorful digital painting of city">
             </a>
 
           </div>
@@ -161,7 +143,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/cd.jpg">
-              <img src="images/print/cd_thumb.png" alt="geometric CD cover graphic">
+              <img src="images/print/cd.jpg" alt="geometric CD cover graphic">
             </a>
 
           </div>
@@ -170,7 +152,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/event_poster_thumb.jpg">
-              <img src="images/print/event_poster_thumb.png" alt="Arts Tech event poster">
+              <img src="images/print/event_poster_thumb.jpg" alt="Arts Tech event poster">
             </a>
 
           </div>
@@ -179,7 +161,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/atk_info.jpg">
-              <img src="images/print/atk_info_thumb.png" alt="Arts tech information poster">
+              <img src="images/print/atk_info.jpg" alt="Arts tech information poster">
             </a>
           </div>
         </div>
@@ -187,7 +169,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/MusicSavesLives.png">
-              <img src="images/print/music_saves_thumb.png" alt="Music Saves lives poster with yellow text on blue background">
+              <img src="images/print/MusicSavesLives.png" alt="Music Saves lives poster with yellow text on blue background">
             </a>
           </div>
         </div>
@@ -195,7 +177,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/HomecomingPoster.jpg">
-              <img src="images/print/HomecomingPosterfull_thumb.png">
+              <img src="images/print/HomecomingPoster.jpg">
             </a>
           </div>
         </div>
@@ -203,7 +185,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="images/print/homecoming.jpg">
-              <img src="images/print/homecomingcover_thumb.png" alt="Homecoming Banner graphic">
+              <img src="images/print/homecoming.jpg" alt="Homecoming Banner graphic">
             </a>
           </div>
         </div>
@@ -271,25 +253,17 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="images/photography/msc/model.png">
-        <img src="images/photography/msc/model_thumb.jpg" alt="young indian woman dressed in traditional apparel">
+        <img src="images/photography/msc/model.png" alt="young indian woman dressed in traditional apparel">
       </a>
     </div>
   </div>
 
 
-  <!-- <div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/photography/msc/sunset_thumb.jpg" alt="long ways portrait of blue night sky with moon and star" width="600" height="400">
-      </a>
-      <div class="desc">Add a description of the image here</div>
-    </div>
-  </div> -->
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/roses_thumb.jpg" alt="romantic afternoon rose scene in front of a fan">
+      <a target="_blank" href="images/photography/msc/roses.jpg">
+        <img src="images/photography/msc/roses.jpg" alt="romantic afternoon rose scene in front of a fan">
       </a>
     </div>
   </div>
@@ -297,7 +271,7 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="images/photography/msc/fall.JPG">
-        <img src="images/photography/msc/fall_thumb.jpg" alt="Close up of running water">
+        <img src="images/photography/msc/fall.jpg" alt="Close up of running water">
       </a>
     </div>
   </div>
@@ -305,23 +279,23 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="images/photography/msc/sax.jpg">
-        <img src="images/photography/msc/Sax_thumb.jpg" alt="man playing saxophone on stage under bright indigo lights">
+        <img src="images/photography/msc/sax.jpg" alt="man playing saxophone on stage under bright indigo lights">
       </a>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/blue_people_thumb.jpg" alt="blue atmosphere of dancing crowd at concert">
+      <a target="_blank" href="images/photography/msc/concertgoer.jpg">
+        <img src="images/photography/msc/concertgoer.jpg" alt="blue atmosphere of dancing crowd at concert">
       </a>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/film_thumb.jpg" alt="black and white asymmetrical portrait in front of fountain">
+      <a target="_blank" href="images/photography/msc/film.jpg">
+        <img src="images/photography/msc/film.jpg" alt="black and white asymmetrical portrait in front of fountain">
       </a>
     </div>
   </div>
@@ -329,24 +303,24 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/onenight_thumb.jpg" alt="shadow of an ice house">
+      <a target="_blank" href="images/photography/msc/onenight.jpg">
+        <img src="images/photography/msc/onenight.jpg" alt="shadow of an ice house">
       </a>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/fire_thumb.jpg" alt="close up of fireworks">
+      <a target="_blank" href="images/photography/msc/fire.jpg">
+        <img src="images/photography/msc/fire.jpg" alt="close up of fireworks">
       </a>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/lonely_thumb.jpg" alt="dead roses beside brown chair">
+      <a target="_blank" href="images/photography/msc/lonely.jpg">
+        <img src="images/photography/msc/lonely.jpg" alt="dead roses beside brown chair">
       </a>
     </div>
   </div>
@@ -354,7 +328,7 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="images/photography/msc/tree.png">
-        <img src="images/photography/msc/tree_thumb.jpg" alt="close up of a pine tree with specks of snow">
+        <img src="images/photography/msc/tree.png" alt="close up of a pine tree with specks of snow">
       </a>
     </div>
   </div>
@@ -362,8 +336,8 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="images/photography/msc">
-        <img src="images/photography/msc/atkfest_thumb.jpg" alt="rapper on the microphone blurred with pink and blue lights">
+      <a target="_blank" href="images/photography/msc/atkfest.jpg">
+        <img src="images/photography/msc/atkfest.jpg" alt="rapper on the microphone blurred with pink and blue lights">
       </a>
     </div>
   </div>
