--- a/aboutMe.html
+++ b/aboutMe.html
@@ -84,11 +84,11 @@
 
       <h3>What am I doing now?</h3>
 
-      <p>Since graduating with a Bachelor’s of Science Degree in <a href="https://finearts.illinoisstate.edu/arts-technology/" style="color: #ec91a6;">Arts Technology</a> at Illinois State University, I’ve been seeking new opportunities in the professional world, particularly around the Chicagoland area.</p>
+      <p>Since graduating with a Bachelor’s of Science Degree in <a href="https://finearts.illinoisstate.edu/arts-technology/" target="_blank" style="color: #ec91a6;">Arts Technology</a> at Illinois State University, I’ve been seeking new opportunities in the professional world, particularly around the Chicagoland area.</p>
 
       <p>In regards to the skills that I currently have, I take interest in all types of media and see myself specializing in more than one field of art. You may find that my most recent completed projects are focused within Front End Web Development, Graphic Design, Motion Design, and User Interface/User Experience Design. I am compelled to follow one or more of these paths thoroughly.</p>
 
-      <p>Want to work on a project together? <a href="mailto:heatherwiemelt@gmail.com" style=" color: #ec91a6;">Contact Me</a> </p>
+      <p>Want to work on a project together? <a href="mailto:heatherwiemelt@gmail.com" target="_blank" style=" color: #ec91a6;">Contact Me</a> </p>
 
 
 
