--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="images/photography/msc/fall.JPG">
-        <img src="images/photography/msc/fall.jpg" alt="Close up of running water">
+        <img src="images/photography/msc/fall.JPG" alt="Close up of running water">
       </a>
     </div>
   </div>
