--- a/aboutMe.html
+++ b/aboutMe.html
@@ -43,15 +43,18 @@
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
   <div class="topnav">
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+
     <a href="#home" class="active"></a>
     <div id="myLinks">
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
       <a href="index.html"><div class="main_links">Portfolio</div><br></a>
     </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+
   </div>
 <!-- End smartphone / tablet look -->
 </div>
@@ -71,16 +74,14 @@
 
 
     <div class="content_box">
-<img src="images/hmw.jpg" style="float: left;padding:20px;margin:10px;width: 250px;" >
+<img src="images/hmw.jpg" class="aboutMe_bio" >
       <h3>Hello!</h3>
 
       <p>I am an artist at heart and a developer/designer at work. I live for creating and discovering unique visual and audial discoveries that the world has to offer.</p>
 
       <h3>My style is my own. Here is how I work.</h3>
 
-      <p>When I am in my own headspace, I have an intuitive way of thinking. My style is consistent with staying close to the fundamentals of design and understanding that the frame is what holds up a masterpiece in the end. I favor traditional styles with organic finishes, but that doesn’t keep me from absorbing the newest and latest digital trends. I see how the world changes and I intend to evolve with it. I often work with others and am quite familiar with collaborative projects, however I do not shy away from doing my own thing and enjoy keeping myself busy with multiple creative projects at a time.</p>
-
-      <p>When I am tracking for solutions to problems, I keep notes, ask questions, and then get right to it. I consider myself both a visual and kinesthetic learner and pick up information best by doing and visualizing what is in front of me. Many of my closest friends and followers know that I have a love for arts in various fields. In my free time, you can find me solving a giant jigsaw puzzle, listening to music, reorganizing a bookshelf, visiting a local arts and crafts fair, oil painting, or immersing myself in a video game.</p>
+      <p>When I am in my own headspace, I have an intuitive way of thinking. My style is consistent with staying close to the fundamentals of design and understanding that the frame is what holds up a masterpiece in the end. I favor traditional styles with organic finishes, but that doesn’t keep me from absorbing the newest and latest digital trends. I see how the world changes and I intend to evolve with it.</p>  <p>I consider myself both a visual and kinesthetic learner and pick up information best by doing and visualizing what is in front of me. Many of my closest friends and followers know that I have a love for arts in various fields. In my free time, you can find me solving a giant jigsaw puzzle, listening to music, reorganizing a bookshelf, visiting a local arts and crafts fair, oil painting, or immersing myself in a video game.</p>
 
       <h3>What am I doing now?</h3>
 
@@ -131,4 +132,15 @@ function openCity(evt, cityName) {
 </script>
 
 </body>
+
+
+
+<!--Footer-->
+<footer>
+ <address>
+
+ </address>
+ <p><small>© Copyright 2019 <a href="mailto:heatherwiemelt@gmail.com">Heather Wiemelt.</a></small></p>
+</footer>
+
 </html>
