--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 </head>
 
 <body>
@@ -37,21 +37,21 @@
 <!-- End Desktop -->
 
 
-
-
-
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
   <div class="topnav">
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+
     <a href="#home" class="active"></a>
     <div id="myLinks">
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
       <a href="index.html"><div class="main_links">Portfolio</div><br></a>
     </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+
   </div>
 <!-- End smartphone / tablet look -->
 </div>
@@ -386,4 +386,13 @@ document.getElementById("defaultOpen").click();
   </div>
 </div>
 </body>
+
+<!--Footer-->
+<footer>
+ <address>
+
+ </address>
+ <p><small>© Copyright 2019 <a href="mailto:heatherwiemelt@gmail.com">Heather Wiemelt.</a></small></p>
+</footer>
+
 </html>
