--- a/resume.html
+++ b/resume.html
@@ -44,15 +44,18 @@
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
   <div class="topnav">
-    <a href="#home" class="active">Navigation</a>
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+
+    <a href="#home" class="active"></a>
     <div id="myLinks">
       <a href="aboutMe.html"><div class="main_links">About Me</div><br></a>
       <a href="resume.html"><div class="main_links">Resume</div><br></a>
       <a href="index.html"><div class="main_links">Portfolio</div><br></a>
     </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+
   </div>
 <!-- End smartphone / tablet look -->
 </div>
@@ -83,6 +86,8 @@
 
   </div>
 </div>
+
+
 
 
 <!---Mobile Nav--->
@@ -118,4 +123,15 @@ function openCity(evt, cityName) {
 </script>
 
 </body>
+
+<!--Footer-->
+<footer>
+ <address>
+
+ </address>
+ <p><small>© Copyright 2019 <a href="mailto:heatherwiemelt@gmail.com">Heather Wiemelt.</a></small></p>
+</footer>
+
+
+
 </html>
